--- a/vista-sample/src/main/res/layout/fragment_lorem_ipsum.xml
+++ b/vista-sample/src/main/res/layout/fragment_lorem_ipsum.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="match_parent">
+             android:layout_height="match_parent"
+             android:paddingLeft="@dimen/activity_horizontal_margin"
+             android:paddingRight="@dimen/activity_horizontal_margin"
+             android:paddingTop="@dimen/activity_vertical_margin"
+             android:paddingBottom="@dimen/activity_vertical_margin">
 
     <include layout="@layout/fragment_vertical_list_item"
              android:layout_width="wrap_content"
