--- a/vista-sample/src/main/res/menu/activity_main_drawer.xml
+++ b/vista-sample/src/main/res/menu/activity_main_drawer.xml
@@ -18,6 +18,9 @@
                 android:id="@+id/nav_grid_view"
                 android:title="@string/navigation_drawer_grid_view"/>
         <item
+                android:id="@+id/nav_horizontal_scroll_view"
+                android:title="@string/navigation_drawer_horizontal_scroll_view"/>
+        <item
                 android:id="@+id/nav_scroll_view"
                 android:title="@string/navigation_drawer_scroll_view"/>
     </group>
