--- a/vista-sample/src/main/res/layout/fragment_grid_view.xml
+++ b/vista-sample/src/main/res/layout/fragment_grid_view.xml
@@ -21,11 +21,7 @@
         android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:clipChildren="false"
         android:clipToPadding="false"
         android:numColumns="2"
-        app:vistaEdgeEffectColor="@color/md_pink_A200"/>
+        app:vistaColor="@color/md_pink_A200"/>
