--- a/vista-sample/src/main/res/layout/fragment_horizontal_scroll_view.xml
+++ b/vista-sample/src/main/res/layout/fragment_horizontal_scroll_view.xml
@@ -22,15 +22,12 @@
         android:layout_height="match_parent"
         android:clipChildren="false"
         android:clipToPadding="false"
-        app:vistaEdgeEffectColor="@color/md_brown_700">
+        app:vistaColor="@color/md_brown_700"
+        app:vistaThicknessScale="0.75">
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
             android:orientation="horizontal">
 
         <include layout="@layout/fragment_vertical_list_item"
