--- a/vista-sample/src/main/res/layout/fragment_nested_scroll_view.xml
+++ b/vista-sample/src/main/res/layout/fragment_nested_scroll_view.xml
@@ -22,15 +22,11 @@
         android:layout_height="match_parent"
         android:clipChildren="false"
         android:clipToPadding="false"
-        app:vistaEdgeEffectColor="@color/md_amber_A200">
+        app:vistaColor="@color/md_amber_A200">
 
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
         <include layout="@layout/fragment_vertical_list_item"/>
