--- a/vista-sample/src/main/res/layout/fragment_recycler_view.xml
+++ b/vista-sample/src/main/res/layout/fragment_recycler_view.xml
@@ -21,10 +21,6 @@
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:clipChildren="false"
         android:clipToPadding="false"
-        app:vistaEdgeEffectColor="@color/md_cyan_A200"/>
+        app:vistaColor="@color/md_cyan_A200"/>
