--- a/vista-sample/src/main/res/layout/fragment_vertical_list_item.xml
+++ b/vista-sample/src/main/res/layout/fragment_vertical_list_item.xml
@@ -2,5 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:padding="12dp"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:text="@string/lorem_ipsum"/>
