--- a/vista-library/src/main/res/values/attrs.xml
+++ b/vista-library/src/main/res/values/attrs.xml
@@ -7,6 +7,7 @@
         <attr name="vistaColor" format="color"/>
         <attr name="vistaThicknessScale" format="float"/>
         <attr name="vistaEdgeScale" format="float"/>
+        <attr name="vistaDisableHotspot" format="boolean"/>
     </declare-styleable>
 
 </resources>
